<resources>
    <string name="app_name">Iread</string>
    <string name="perinfo">个人信息</string>
    <string name="selseat">选座</string>
    <string name="reservation">预约选座</string>
    <string name="sitting">设置</string>
    <string name="about">关于</string>
    <string name="main_top">致爱读书的你</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎 ！"</string>
    <string name="invalid_username">用户名无效</string>
    <string name="invalid_password">密码必须大于5个字符</string>
    <string name="login_failed">"登录失败"</string>
</resources>