<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".MainActivity"
>
    <TextView
            android:id="@+id/library_top"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/main_top"
            android:textSize="30sp"
            android:textColor="#4B0082"
            />
    <Button
            android:id="@+id/personal_information"
            android:layout_width="300dp"
            android:layout_height="0px"
            android:layout_weight="1"
            android:drawableLeft="@drawable/perinfo"
            android:background="@drawable/button_circle_shape"
            android:drawablePadding="10dp"
            android:text="@string/perinfo"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/perinfo"/>
    <Button
            android:id="@+id/blank1"
            android:layout_width="0dp"
            android:layout_height="0px"
            android:layout_weight="0.2"
    />
    <Button
            android:id="@+id/seat_selection"
            android:layout_width="300dp"
            android:layout_height="0px"
            android:layout_weight="1"
            android:drawableLeft="@drawable/selseat"
            android:background="@drawable/button_circle_shape"
            android:drawablePadding="10dp"
            android:text="@string/selseat"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/selseat"/>
    <Button
            android:id="@+id/blank2"
            android:layout_width="0dp"
            android:layout_height="0px"
            android:layout_weight="0.2"
    />
    <Button
            android:id="@+id/reservation"
            android:layout_width="300dp"
            android:layout_height="0px"
            android:layout_weight="1"
            android:drawableLeft="@drawable/reservation"
            android:background="@drawable/button_circle_shape"
            android:drawablePadding="10dp"
            android:text="@string/reservation"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/reservation"/>
    <Button
            android:id="@+id/blank3"
            android:layout_width="0dp"
            android:layout_height="0px"
            android:layout_weight="0.2"
    />
    <Button
            android:id="@+id/set"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:drawableLeft="@drawable/setting"
            android:background="@drawable/button_nocircle_shape"
            android:drawablePadding="10dp"
            android:text="@string/sitting"
            android:textSize="20sp"
            android:gravity="center_vertical" android:drawableStart="@drawable/setting"/>
    <Button
            android:id="@+id/blank4"
            android:layout_width="0dp"
            android:layout_height="0px"
            android:layout_weight="0.2"
    />
    <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:drawableLeft="@drawable/about"
            android:background="@drawable/button_nocircle_shape"
            android:drawablePadding="10dp"
            android:text="@string/about"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/about"/>
    <Button
            android:id="@+id/black"
            android:layout_width="0dp"
            android:layout_height="0px"
            android:layout_weight="1"
            />
</LinearLayout>